<resources>
    <string name="app_name">tswanarecipes</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id"/>
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token"/>
    <string name="lbl_by_james_milner">By James Milner</string>
    <string name="lbl_enter_passwrod">Enter Passwrod</string>
    <string name="lbl_kyle_austin">Kyle Austin</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account? Sign up</string>
    <string name="lbl_user_name">User-Name</string>
    <string name="msg_by_issabella_et">By Issabella Ethan</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="lbl_155_saved">155 Saved</string>
    <string name="lbl_green_onion">Green onion</string>
    <string name="msg_setswana_cookin">Setswana
Cooking</string>
    <string name="lbl_log_out">Log-Out</string>
    <string name="lbl_retype_password">Retype Password</string>
    <string name="lbl_52">5</string>
    <string name="lbl_new_recipes">New Recipes</string>
    <string name="msg_june_12_2020">June 12, 2020 - 19:35</string>
    <string name="lbl_259">259</string>
    <string name="lbl_procedure">Procedure</string>
    <string name="lbl_10_items">10 Items</string>
    <string name="lbl_500g">500g</string>
    <string name="lbl_local_dishes">Local Dishes</string>
    <string name="lbl_e">e...</string>
    <string name="msg_save_recipe_ale">Save Recipe Alert!</string>
    <string name="lbl_by_spicy_nelly">By Spicy Nelly</string>
    <string name="lbl_step_6">Step 6</string>
    <string name="lbl_step_7">Step 7</string>
    <string name="lbl_step_8">Step 8</string>
    <string name="lbl_step_9">Step 9</string>
    <string name="lbl_step_2">Step 2</string>
    <string name="lbl_step_3">Step 3</string>
    <string name="lbl_step_4">Step 4</string>
    <string name="lbl_step_5">Step 5</string>
    <string name="lbl_step_1">Step 1</string>
    <string name="lbl_omelette">Omelette</string>
    <string name="lbl_recent_search">Recent Search</string>
    <string name="msg_red_green_chi">Red &amp; Green Chilli</string>
    <string name="lbl_2_5m">2.5M</string>
    <string name="lbl_chicken">Chicken</string>
    <string name="msg_by_miquel_ferra">By Miquel Ferran</string>
    <string name="lbl_by_boity">By Boity</string>
    <string name="lbl_burger">Burger</string>
    <string name="lbl_app">App</string>
    <string name="lbl_filter_search">Filter Search</string>
    <string name="lbl_protein">Protein</string>
    <string name="msg_jeniffern_wilso">Jeniffern Wilson</string>
    <string name="lbl_followers">Followers</string>
    <string name="lbl_fruit">Fruit</string>
    <string name="lbl_32">3</string>
    <string name="msg_pilaf_sweet_wit">Pilaf sweet with lamb-and-raisins</string>
    <string name="lbl_20_mins">20 mins</string>
    <string name="lbl_password">Password</string>
    <string name="msg_traditional_spa">Traditional spare ribs baked</string>
    <string name="lbl_yesterday">Yesterday</string>
    <string name="msg_mophane_worms_a">Mophane Worms and Pap</string>
    <string name="msg_lorem_ipsum_tem">Lorem Ipsum tempor incididunt ut labore et dolore,inise voluptate velit esse cillum</string>
    <string name="lbl_chef">Chef</string>
    <string name="msg_lamb_chops_with">Lamb chops with fruity couscous and mint</string>
    <string name="lbl_300g">300g</string>
    <string name="lbl_your_email">Your Email</string>
    <string name="lbl_bogobe">Bogobe</string>
    <string name="lbl_120_min">120 min</string>
    <string name="msg_lorem_ipsum_tem2">Lorem Ipsum tempor incididunt ut labore et dolore,inise voluptate.</string>
    <string name="lbl_category">Category</string>
    <string name="msg_lorem_ipsum_tem5">Lorem Ipsum tempor incididunt ut labore et dolore,in voluptate velit esse cillum dolore eu fugiat nulla pariatur?
Tempor incididunt ut labore et dolore,in voluptate velit esse cillum dolore eu fugiat nulla pariatur?</string>
    <string name="msg_lorem_ipsum_tem3">Lorem Ipsum tempor incididunt ut labore et dolore,in voluptate velit esse cillum</string>
    <string name="lbl_22">2</string>
    <string name="msg_lorem_ipsum_tem4">Lorem Ipsum tempor incididunt ut labore et dolore,in voluptate velit esse cillum dolore eu fugiat nulla pariatur?</string>
    <string name="msg_app_recipe_co_j">app.Recipe.co/jollof_rice</string>
    <string name="lbl_vegetarian">Vegetarian</string>
    <string name="lbl_snacks">Snacks</string>
    <string name="lbl_4_5">4.5</string>
    <string name="lbl_4_4">4.4</string>
    <string name="lbl_4_7">4.7</string>
    <string name="lbl_saved_recipes">Saved recipes</string>
    <string name="msg_say_something">Say something...</string>
    <string name="lbl_read">Read</string>
    <string name="lbl_4_0">4.0</string>
    <string name="lbl_4_3">4.3</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_sign_up2">Sign Up</string>
    <string name="msg_already_a_membe">Already a member? Sign In</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_by_chef_john">By Chef John</string>
    <string name="msg_create_an_accou">Create an account</string>
    <string name="msg_accept_terms">Accept terms &amp; Condition</string>
    <string name="lbl_20_min">20 min</string>
    <string name="lbl_share">share</string>
    <string name="lbl_or_sign_in_with">Or Sign in With</string>
    <string name="msg_chinese_style_e">Chinese style Egg fried rice with sliced pork fillet</string>
    <string name="lbl_vegetables">Vegetables</string>
    <string name="lbl_link_copied">Link  Copied</string>
    <string name="lbl_enter_email">Enter Email</string>
    <string name="msg_spicy_fried_ric">Spicy fried rice mix chicken bali</string>
    <string name="msg_100_tswana_cui">100% Tswana Cuisine Recipes </string>
    <string name="lbl_fries">Fries</string>
    <string name="lbl_welcome_back">Welcome Back!</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_videos">Videos</string>
    <string name="lbl_50_mins">50 mins</string>
    <string name="lbl_search_recipes">Search recipes</string>
    <string name="lbl_about_the_app">About the App</string>
    <string name="lbl_vegan">Vegan</string>
    <string name="msg_magwinya_and_se">Magwinya and Serobe</string>
    <string name="lbl_enter_name">Enter Name</string>
    <string name="msg_rice_pilaf_bro">Rice Pilaf, Broccoli and Chicken</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="msg_new_recipe_aler">New Recipe Alert!</string>
    <string name="lbl4">\?</string>
    <string name="lbl5">\??</string>
    <string name="lbl2">&#x1f44d;</string>
    <string name="lbl3">&#x1f44e;</string>
    <string name="lbl_rate">Rate</string>
    <string name="lbl_slice_bread">Slice Bread</string>
    <string name="lbl_lunch">Lunch</string>
    <string name="msg_quarter_and_atc">Quarter and Atchaar</string>
    <string name="lbl_by_laura_wilson">By Laura wilson</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="msg_magwinya_and_te">Magwinya and Tea</string>
    <string name="lbl_by_mark_kelvin">By Mark Kelvin</string>
    <string name="lbl_rate_recipe">Rate Recipe </string>
    <string name="lbl_dinner">Dinner</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_by_lucas_moura">By Lucas Moura</string>
    <string name="lbl_30_mins_ago">30 mins ago</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="lbl_ingrident">Ingrident</string>
    <string name="lbl_hello">Hello,</string>
    <string name="lbl_320_min">320 min</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_rate_recipe2">Rate recipe</string>
    <string name="msg_teezeydagreat_g">teezeydagreat@gmail.com</string>
    <string name="msg_private_chef_pa">Private Chef
Passionate about food and life &#x1f958;&#x1f372;&#x1f35d;&#x1f371;
More...</string>
    <string name="lbl_1_serve">1 serve</string>
    <string name="msg_already_a_membe2">Already a member? </string>
    <string name="lbl_200_comments">200 Comments</string>
    <string name="msg_stir_fry_chicke">Stir-fry chicken with broccoli in sweet and sour sauce and rice.</string>
    <string name="lbl_save_changes">Save Changes</string>
    <string name="lbl_by_zam">By ZAM</string>
    <string name="lbl_hot_dog">Hot Dog</string>
    <string name="lbl_20_mins2">20 Mins</string>
    <string name="msg_don_t_have_an_a2">Don\u2019t have an account? </string>
    <string name="lbl_3_5">3.5</string>
    <string name="lbl_3_7">3.7</string>
    <string name="msg_bogobe_jwa_lero">Bogobe Jwa Lerotse and Seswaa</string>
    <string name="lbl_by_laura_wilson2">By laura wilson</string>
    <string name="lbl_app_permissions">App Permissions</string>
    <string name="msg_copy_recipe_lin">Copy recipe link and share your recipe link with  friends and family.</string>
    <string name="lbl_3_0">3.0</string>
    <string name="lbl_10_mins_ago">10 mins ago</string>
    <string name="msg_simple_way_to_f">Simple way to find a Tasty Setswana Recipe</string>
    <string name="lbl_search_recipe">Search recipe</string>
    <string name="lbl_time">Time</string>
    <string name="lbl_lagos_nigeria">Lagos, Nigeria</string>
    <string name="lbl_mango_atchaar">Mango Atchaar</string>
    <string name="lbl_gemere">Gemere</string>
    <string name="msg_dinawa_ka_lecho">Dinawa ka Lechotlho</string>
    <string name="lbl_beverages">Beverages</string>
    <string name="lbl_enter_password">Enter Password</string>
    <string name="lbl_mor">\?&#x1f371;
Mor</string>
    <string name="msg_what_are_you_co">What are you cooking today?</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_breakfast">BreakFast</string>
    <string name="msg_private_chef_pa2">Private Chef
Passionate about food and life &#x1f958;</string>
    <string name="msg_spice_roasted_c">spice roasted chicken with flavored rice</string>
    <string name="lbl_copy_link">Copy Link</string>
    <string name="lbl_filter">Filter</string>
    <string name="lbl_oninon">Oninon</string>
    <string name="lbl_pap_and_braai">Pap and Braai</string>
    <string name="lbl_oldest">Oldest</string>
    <string name="lbl_13k_reviews">(13k Reviews)</string>
    <string name="msg_rate_on_app_sto">Rate on app store</string>
    <string name="lbl_40_min">40 min</string>
    <string name="lbl_by_nachos">By Nachos</string>
    <string name="lbl_newest">Newest</string>
    <string name="lbl_search_result">Search Result</string>
    <string name="lbl_gluten_free">Gluten Free</string>
    <string name="lbl_120_mins">120 Mins</string>
    <string name="lbl_start_cooking">Start Cooking</string>
    <string name="lbl_seswaa_and_pap">Seswaa and Pap</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_90_mins">90 Mins</string>
    <string name="lbl_by_lawson">By Lawson</string>
    <string name="lbl_follow">Follow</string>
    <string name="msg_load_more_comme">Load More comments</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_lettuce">Lettuce</string>
    <string name="lbl_cabbage">Cabbage</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_popularity">Popularity</string>
    <string name="lbl">**********</string>
    <string name="lbl_unsave">Unsave</string>
    <string name="lbl_kate_johnson">Kate Johnson</string>
    <string name="lbl_10_steps">10 Steps</string>
    <string name="lbl_bella_throne">Bella Throne</string>
    <string name="lbl_step_10">Step 10</string>
    <string name="msg_christopher_osh">Christopher Oshana</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_9">9</string>
    <string name="msg_let_s_help_you">Let\u2019s help you set up your account, it won\u2019t take long.</string>
</resources>