<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUpVM" type="com.tswanarecipe.app.modules.signup.data.viewmodel.SignUpVM"/>
    </data>
    <FrameLayout android:id="@+id/frameSignup"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumncreateanaccou"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_29pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtCreateanaccou"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{signUpVM.signUpModel.txtCreateanaccou}"
                style="@style/txtPoppinssemibold20" tools:text="@string/msg_create_an_accou"/>
            <TextView android:id="@+id/txtLetshelpyou"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:text="@{signUpVM.signUpModel.txtLetshelpyou}"
                style="@style/txtPoppinsregular11_4" tools:text="@string/msg_let_s_help_you"/>
            <TextView android:ellipsize="end" android:id="@+id/txtLabel"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{signUpVM.signUpModel.txtLabel}"
                style="@style/txtPoppinsregular14" tools:text="@string/lbl_name"/>
            <EditText
                android:background="@drawable/rectangle_border_bluegray_100_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_enter_name"
                android:id="@+id/etName" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_18pxv"
                android:singleLine="true"
                android:text="@={signUpVM.signUpModel.etNameValue}"
                android:textColorHint="@color/bluegray_100"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLabelOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{signUpVM.signUpModel.txtLabelOne}"
                style="@style/txtPoppinsregular14" tools:text="@string/lbl_email"/>
            <EditText
                android:background="@drawable/rectangle_border_bluegray_100_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_enter_email"
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_18pxv"
                android:singleLine="true"
                android:text="@={signUpVM.signUpModel.etEmailValue}"
                android:textColorHint="@color/bluegray_100"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLabelTwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{signUpVM.signUpModel.txtLabelTwo}"
                style="@style/txtPoppinsregular14" tools:text="@string/lbl_password"/>
            <EditText
                android:background="@drawable/rectangle_border_bluegray_100_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_enter_passwrod"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_18pxv"
                android:singleLine="true"
                android:text="@={signUpVM.signUpModel.etPasswordValue}"
                android:textColorHint="@color/bluegray_100"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLabelThree"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{signUpVM.signUpModel.txtLabelThree}"
                style="@style/txtPoppinsregular14" tools:text="@string/msg_confirm_passwor"/>
            <EditText
                android:background="@drawable/rectangle_border_bluegray_100_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_retype_password"
                android:id="@+id/etPasswordConfirm"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_19pxv"
                android:singleLine="true"
                android:text="@={signUpVM.signUpModel.etPasswordConfirmValue}"
                android:textColorHint="@color/bluegray_100"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:buttonTint="@color/orange_500"
                android:ellipsize="end"
                android:fontFamily="@font/poppins"
                android:id="@+id/checkBoxAcceptterms"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="wrap_content"
                android:paddingStart="@dimen/_5pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@string/msg_accept_terms"
                android:textColor="@color/orange_500"
                android:textFontWeight="400"
                android:textSize="@dimen/_11pxh"
                android:textStyle="normal" tools:text="@string/msg_accept_terms"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearBigButton"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyleteal_600cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLabelFour"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_16pxv"
                    android:layout_marginStart="@dimen/_111pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_weight="0.82"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{signUpVM.signUpModel.txtLabelFour}"
                    style="@style/txtPoppinssemibold16_1" tools:text="@string/lbl_sign_up2"/>
                <ImageView android:id="@+id/imageArrowright"
                    android:layout_height="@dimen/_11pxh"
                    android:layout_marginBottom="@dimen/_24pxv"
                    android:layout_marginEnd="@dimen/_88pxh"
                    android:layout_marginStart="@dimen/_40pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="@dimen/_13pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowright"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearLine"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <View android:background="@color/bluegray_100"
                    android:id="@+id/lineLineFive"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_weight="0.28" android:layout_width="0dp"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOrSigninWith"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_weight="0.45"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{signUpVM.signUpModel.txtOrSigninWith}"
                    style="@style/txtPoppinsmedium11" tools:text="@string/lbl_or_sign_in_with"/>
                <View android:background="@color/bluegray_100"
                    android:id="@+id/lineLineSix"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_weight="0.28" android:layout_width="0dp"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowicons8googletwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageButton
                    android:background="@drawable/rectangle_bg_white_a700_radius_10"
                    android:id="@+id/btnIcons8googleTwo"
                    android:layout_height="@dimen/_44pxh"
                    android:layout_width="@dimen/_44pxh"
                    android:paddingHorizontal="@dimen/_12pxh"
                    android:paddingVertical="@dimen/_12pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_icons8google2" tools:ignore="ContentDescription"/>
                <ImageButton
                    android:background="@drawable/rectangle_bg_white_a700_radius_10"
                    android:id="@+id/btnFacebook"
                    android:layout_height="@dimen/_44pxh"
                    android:layout_marginStart="@dimen/_25pxh"
                    android:layout_width="@dimen/_44pxh"
                    android:paddingHorizontal="@dimen/_12pxh"
                    android:paddingVertical="@dimen/_12pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_facebook" tools:ignore="ContentDescription"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAlreadyamembe"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{signUpVM.signUpModel.txtAlreadyamembe}"
                style="@style/txtPoppinsmedium11_1" tools:text="@string/msg_already_a_membe"/>
        </LinearLayout>
    </FrameLayout>
</layout>
