<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listnewrecipealer1RowModel" type="com.tswanarecipe.app.modules.notificationsread.data.model.Listnewrecipealer1RowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRownewrecipealer"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylebluegray_100_75cornerRadius">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnnewrecipealer"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_9pxv"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_weight="0.9" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtNewRecipeAler"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{listnewrecipealer1RowModel.txtNewRecipeAler}"
                style="@style/txtPoppinssemibold11_3" tools:text="@string/msg_new_recipe_aler"/>
            <TextView android:id="@+id/txtLabel"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent"
                android:text="@{listnewrecipealer1RowModel.txtLabel}"
                style="@style/txtPoppinsregular11" tools:text="@string/msg_lorem_ipsum_tem3"/>
            <TextView android:ellipsize="end" android:id="@+id/txtTime"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{listnewrecipealer1RowModel.txtTime}"
                style="@style/txtPoppinsregular7" tools:text="@string/lbl_10_mins_ago"/>
        </LinearLayout>
        <ImageButton
            android:background="@drawable/rectangle_bg_orange_100_radius_10"
            android:id="@+id/btnFile"
            android:layout_height="@dimen/_28pxh"
            android:layout_marginBottom="@dimen/_54pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="@dimen/_28pxh"
            android:paddingHorizontal="@dimen/_7pxh"
            android:paddingVertical="@dimen/_7pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_file" tools:ignore="ContentDescription"/>
    </LinearLayout>
</layout>
